// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingInputRenderer snapshot (T-0009-059) — expressive×health matches snapshot at expressive×health 1`] = `
<View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#6B5F56",
        "fontSize": 14,
        "fontWeight": "400",
        "letterSpacing": 0,
        "lineHeight": 20,
        "marginBottom": 4,
      }
    }
  >
    Rating
  </Text>
  <View
    accessibilityLabel="Rating"
    accessibilityRole="adjustable"
    accessibilityValue={
      {
        "max": 5,
        "min": 0,
        "now": 3,
        "text": "3 of 5",
      }
    }
    accessible={true}
    onAccessibilityAction={[Function]}
    style={
      {
        "flexDirection": "row",
        "gap": 4,
      }
    }
    testID="ratinginput-container-ri1"
  >
    <View
      accessibilityLabel="1 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 48,
        }
      }
      testID="ratinginput-glyph-1-ri1"
    >
      <Text
        style={
          {
            "color": "#4A7438",
            "fontSize": 28,
          }
        }
      >
        ★
      </Text>
    </View>
    <View
      accessibilityLabel="2 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 48,
        }
      }
      testID="ratinginput-glyph-2-ri1"
    >
      <Text
        style={
          {
            "color": "#4A7438",
            "fontSize": 28,
          }
        }
      >
        ★
      </Text>
    </View>
    <View
      accessibilityLabel="3 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 48,
        }
      }
      testID="ratinginput-glyph-3-ri1"
    >
      <Text
        style={
          {
            "color": "#4A7438",
            "fontSize": 28,
          }
        }
      >
        ★
      </Text>
    </View>
    <View
      accessibilityLabel="4 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 48,
        }
      }
      testID="ratinginput-glyph-4-ri1"
    >
      <Text
        style={
          {
            "color": "#EFE9DF",
            "fontSize": 28,
          }
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityLabel="5 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 48,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 48,
        }
      }
      testID="ratinginput-glyph-5-ri1"
    >
      <Text
        style={
          {
            "color": "#EFE9DF",
            "fontSize": 28,
          }
        }
      >
        ☆
      </Text>
    </View>
  </View>
</View>
`;

exports[`RatingInputRenderer snapshot (T-0009-059) — productive×focus matches snapshot at productive×focus 1`] = `
<View>
  <Text
    accessibilityElementsHidden={true}
    style={
      {
        "color": "#5C6470",
        "fontSize": 13,
        "fontWeight": "400",
        "letterSpacing": 0.1,
        "lineHeight": 18,
        "marginBottom": 4,
      }
    }
  >
    Rating
  </Text>
  <View
    accessibilityLabel="Rating"
    accessibilityRole="adjustable"
    accessibilityValue={
      {
        "max": 5,
        "min": 0,
        "now": 3,
        "text": "3 of 5",
      }
    }
    accessible={true}
    onAccessibilityAction={[Function]}
    style={
      {
        "flexDirection": "row",
        "gap": 4,
      }
    }
    testID="ratinginput-container-ri1"
  >
    <View
      accessibilityLabel="1 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
      testID="ratinginput-glyph-1-ri1"
    >
      <Text
        style={
          {
            "color": "#4F46E5",
            "fontSize": 24,
          }
        }
      >
        ★
      </Text>
    </View>
    <View
      accessibilityLabel="2 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
      testID="ratinginput-glyph-2-ri1"
    >
      <Text
        style={
          {
            "color": "#4F46E5",
            "fontSize": 24,
          }
        }
      >
        ★
      </Text>
    </View>
    <View
      accessibilityLabel="3 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
      testID="ratinginput-glyph-3-ri1"
    >
      <Text
        style={
          {
            "color": "#4F46E5",
            "fontSize": 24,
          }
        }
      >
        ★
      </Text>
    </View>
    <View
      accessibilityLabel="4 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
      testID="ratinginput-glyph-4-ri1"
    >
      <Text
        style={
          {
            "color": "#ECEEF1",
            "fontSize": 24,
          }
        }
      >
        ☆
      </Text>
    </View>
    <View
      accessibilityLabel="5 star"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
      testID="ratinginput-glyph-5-ri1"
    >
      <Text
        style={
          {
            "color": "#ECEEF1",
            "fontSize": 24,
          }
        }
      >
        ☆
      </Text>
    </View>
  </View>
</View>
`;
